fix: swagger doc updated
